<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">DraStic</string>
    <string name="app_notification_text">Nintendo DS emulator</string>
    <string name="app_version">Version r2.5.2.0a</string>
    <string name="btn_rom_all">"All
Games"</string>
    <string name="btn_rom_recent">"Recent
Games"</string>
    <string name="empty" />
    <string name="menu_settings">Settings</string>
    <string name="search_menu_title">Search</string>
    <string name="set_moga_showmapping">Show MOGA Button Mapping</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="str_add_user">Add New User</string>
    <string name="str_add_user_button">Add</string>
    <string name="str_add_user_custom_dir">Use custom user data directory?</string>
    <string name="str_add_user_dir_error">Could not create user directory</string>
    <string name="str_add_user_dir_exists">User directory already exists</string>
    <string name="str_add_user_exists">User already exists</string>
    <string name="str_add_user_select_dir">OK</string>
    <string name="str_bios_error">"The BIOS files could not be installed automatically. Please copy the BIOS files manually to '/sdcard/Android/data/com.dsemu.drastic/files/system'.
 Make sure, the files have the following names and sizes:
 - nds_bios_arm7.bin (16384 bytes)
 - nds_bios_arm9.bin (4096 bytes)
 - nds_firmware.bin (262144 bytes)
"</string>
    <string name="str_bios_installed">The BIOS files were installed successfully, the files you copied to the device have been removed.</string>
    <string name="str_bios_nodst">"The destination directory for the BIOS files could not be accessed.
 Please copy the BIOS files manually to '/sdcard/Android/data/com.dsemu.drastic/files/system'.
 Make sure, the files have the following names and sizes:
 - nds_bios_arm7.bin (16384 bytes)
 - nds_bios_arm9.bin (4096 bytes)
 - nds_firmware.bin (262144 bytes)
"</string>
    <string name="str_bios_nosrc">"Access to the 'Download' directory and the SDCARD was denied.
 Please make sure the 'Download' directory is not mounted on your PC."</string>
    <string name="str_bios_notfound">"The BIOS files could not be found in the 'Download' directory.
 Please make sure, you have the correct files located in your 'Download' directory and restart DraStic to re-try the installation."</string>
    <string name="str_cm_abxy_A">A</string>
    <string name="str_cm_abxy_B">B</string>
    <string name="str_cm_abxy_X">X</string>
    <string name="str_cm_abxy_Y">Y</string>
    <string name="str_cm_button_enabled">enabled</string>
    <string name="str_cm_ctrlcancel">Cancel</string>
    <string name="str_cm_ctrldefault">Default</string>
    <string name="str_cm_ctrlheader">Controller Layout</string>
    <string name="str_cm_ctrlhide">Hide</string>
    <string name="str_cm_ctrlok">Apply</string>
    <string name="str_cm_ctrlresize">Resize</string>
    <string name="str_cm_ctrlshow">Show</string>
    <string name="str_cm_defaultheader">Global Layout</string>
    <string name="str_cm_deleteforgame">Delete Game-specific Layout</string>
    <string name="str_cm_editbg">Set background image</string>
    <string name="str_cm_editctrl">Edit Controller Layout</string>
    <string name="str_cm_editdefault">Edit Global</string>
    <string name="str_cm_editforgame">Edit Game</string>
    <string name="str_cm_forgameheader">Game-specific Layout</string>
    <string name="str_cm_layoutmenu">Menu</string>
    <string name="str_cm_nobgfound">No image files found in:</string>
    <string name="str_cm_removebg">Remove image</string>
    <string name="str_cm_resetdefault">Reset to Default</string>
    <string name="str_cm_resizeok">Back</string>
    <string name="str_cm_resizescreen">Resize Screen</string>
    <string name="str_cm_savedefault">Save as global Layout</string>
    <string name="str_cm_saveforgame">Save for current Game</string>
    <string name="str_cm_scale_aspect">keep aspect</string>
    <string name="str_cm_selectctrltoast">Please select an Element</string>
    <string name="str_cm_selecttoast">Please select a Screen</string>
    <string name="str_cm_tool_close">Close Tools</string>
    <string name="str_cm_tool_open">Open Tools</string>
    <string name="str_cpy_fail">Data could not be moved.</string>
    <string name="str_cpy_success">Data was moved successfully.</string>
    <string name="str_default_user">Default</string>
    <string name="str_dev_htcone">"Please disable HTC Gestures in the settings, to allow the application to register all touch presses.
Setting the sound latency to medium or low is not recommended on this device."</string>
    <string name="str_drastic_channel_description">Displays a background notification for emulation quick resume</string>
    <string name="str_drastic_channel_name">Background Notification</string>
    <string name="str_editor_tv_end_msg">Do you want to save your changes?</string>
    <string name="str_editor_tv_start_msg">Saved layouts were found</string>
    <string name="str_err_badarc">"The archive you tried to open is not supported.
Please try to extract the .nds file and load that instead"</string>
    <string name="str_err_badrom">The file you tried to open is not a valid ROM.</string>
    <string name="str_err_encrom">"This version of the ROM is encrypted. Encrypted ROMs can only be loaded using the Nintendo ARM7 BIOS dumped from your Nintendo DS.
Please refer to our FAQ at drastic-ds.com for information about the Nintendo ARM7 BIOS, or how to decrypt the ROM yourself."</string>
    <string name="str_err_install">"DraStic could not write to
$path$.
Please check the free space on the internal storage and make sure the directory has writing permission.
Also try to reboot your device."</string>
    <string name="str_err_jniload">DraStic could not be initialized. Please try downloading the app again.</string>
    <string name="str_err_lowmem">The device is running low on memory, DraStic might close unexpectedly..</string>
    <string name="str_err_lowmem_zip">"The device is running low on memory, DraStic might close unexpectedly.
Try to unzip the game, as playing from .zip files takes more memory."</string>
    <string name="str_err_nomount">DraStic can not create its save folder. If your device is connected to a PC/Mac through USB, please disconnect and restart DraStic.</string>
    <string name="str_err_norumble_controller">The currently selected controller has no rumble functionality available. If you are certain your controller has rumble motors and are seeing this message, please Star this Android issue to encourage Google to address it: https://issuetracker.google.com/issues/128314303</string>
    <string name="str_err_norumble_internal">The current device has no internal rumble motor. Rumble functionality will not work as expected.</string>
    <string name="str_set_analogtouch">Right Stick Mode</string>
    <string name="str_set_analogtriggers">Enable Analog Triggers</string>
    <string name="str_set_autofirespeed">Rapid-Fire Speed</string>
    <string name="str_set_autoresume">Resume last save when starting from shortcut</string>
    <string name="str_set_autorotate">Landscape Layout Rotation</string>
    <string name="str_set_autosave">Autosave</string>
    <string name="str_set_btnmod">Action-Button Touch-Region Modifier</string>
    <string name="str_set_cheats">Enable Cheats</string>
    <string name="str_set_ctrlalpha">Controller Opacity</string>
    <string name="str_set_ctrlskin">Skin</string>
    <string name="str_set_deadzone">Right-Stick Deadzone</string>
    <string name="str_set_defaultlayout">Default Layout</string>
    <string name="str_set_devicebtn">Disable Back Button</string>
    <string name="str_set_devicebtn_hint">"Avoids pressing it accidentally during gameplay.
The button will still be active in the menus."</string>
    <string name="str_set_disablemapped">Disable mapped keys in overlay</string>
    <string name="str_set_disablemapped_hint">Buttons with a key mapping will not be active in the controller overlay.</string>
    <string name="str_set_dpadmod">D-Pad Touch-Region Modifier</string>
    <string name="str_set_extrafunc_1">Special Button I</string>
    <string name="str_set_extrafunc_2">Special Button II</string>
    <string name="str_set_extrafunc_3">Special Button III</string>
    <string name="str_set_ffwdtoggle">Fast-Forward Toggle Mode</string>
    <string name="str_set_fpstransparent">Transparent FPS Display</string>
    <string name="str_set_haptic">Haptic Feedback</string>
    <string name="str_set_hdr_controller">External Controller Settings</string>
    <string name="str_set_hdr_general">General Settings</string>
    <string name="str_set_hdr_input">Virtual Gamepad Settings</string>
    <string name="str_set_key_cancel">Cancel</string>
    <string name="str_set_key_skip">Skip</string>
    <string name="str_set_keyconfig">Configure Key Mapping</string>
    <string name="str_set_keyinput">Press Key for:</string>
    <string name="str_set_keymap">Map Control</string>
    <string name="str_set_keymap_extra">Map Special</string>
    <string name="str_set_keymapid">Select Key Mapping</string>
    <string name="str_set_keymapname">Rename</string>
    <string name="str_set_loadconfirm">Savestate Loading needs Confirmation</string>
    <string name="str_set_lua">Enable Lua</string>
    <string name="str_set_menubtn">Disable Menu Button</string>
    <string name="str_set_menubtn_pos">Menu-Button Position</string>
    <string name="str_set_nodiagonals">No diagonal Input for On-Screen D-pad</string>
    <string name="str_set_overwrite">Savestate Overwrite needs Confirmation</string>
    <string name="str_set_rumble_dev">Rumble Device</string>
    <string name="str_set_showfps">Show FPS</string>
    <string name="str_set_showmore">Always show Start and Select buttons</string>
    <string name="str_set_touchthrough">Control presses also touch the DS Touchscreen</string>
    <string name="str_set_wifi">Multiplayer/WiFi</string>
</resources>