<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/menu_bg_center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:background="@color/menu_bg_header">
            <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@id/btn_settings_back_input" android:background="@drawable/btn_back_bg" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:contentDescription="@null" style="@style/drastic_btn_back" />
                <ImageView android:src="@drawable/con_ds" android:contentDescription="@null" style="@style/drastic_option_hdr_image" />
            </LinearLayout>
            <TextView android:text="@string/str_set_hdr_input" style="@style/drastic_option_hdr_text" />
        </TableRow>
        <View android:background="#ff666666" android:layout_height="1.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" />
    </TableLayout>
    <ScrollView android:id="@id/set_content" android:background="@color/menu_bg_center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <CheckBox android:id="@id/cb_showmore" android:text="@string/str_set_showmore" style="@style/drastic_checkbox" />
            <View style="@style/drastic_seperator" />
            <TextView android:id="@id/set_select_menubtn_pos" android:text="@string/str_set_menubtn_pos" style="@style/drastic_option_item_choicehdr_text" />
            <TextView android:id="@id/set_selection_menubtn_pos" style="@style/drastic_option_item_selection_text" />
            <View style="@style/drastic_seperator" />
            <TextView android:id="@id/set_select_extrafunc_1" android:text="@string/str_set_extrafunc_1" style="@style/drastic_option_item_choicehdr_text" />
            <TextView android:id="@id/set_selection_extrafunc_1" style="@style/drastic_option_item_selection_text" />
            <View style="@style/drastic_seperator" />
            <TextView android:id="@id/set_select_extrafunc_2" android:text="@string/str_set_extrafunc_2" style="@style/drastic_option_item_choicehdr_text" />
            <TextView android:id="@id/set_selection_extrafunc_2" style="@style/drastic_option_item_selection_text" />
            <View style="@style/drastic_seperator" />
            <TextView android:id="@id/set_select_extrafunc_3" android:text="@string/str_set_extrafunc_3" style="@style/drastic_option_item_choicehdr_text" />
            <TextView android:id="@id/set_selection_extrafunc_3" style="@style/drastic_option_item_selection_text" />
            <View style="@style/drastic_seperator" />
            <TextView android:id="@id/set_select_ctrlskin" android:text="@string/str_set_ctrlskin" style="@style/drastic_option_item_choicehdr_text" />
            <TextView android:id="@id/set_selection_ctrlskin" style="@style/drastic_option_item_selection_text" />
            <View style="@style/drastic_seperator" />
            <CheckBox android:id="@id/cb_touchthrough" android:text="@string/str_set_touchthrough" style="@style/drastic_checkbox" />
            <View style="@style/drastic_seperator" />
            <CheckBox android:id="@id/cb_haptic" android:text="@string/str_set_haptic" style="@style/drastic_checkbox" />
            <View style="@style/drastic_seperator" />
            <CheckBox android:id="@id/cb_nodiagonals" android:text="@string/str_set_nodiagonals" style="@style/drastic_checkbox" />
            <View style="@style/drastic_seperator" />
            <TextView android:text="@string/str_set_dpadmod" style="@style/drastic_option_item_subhdr_text" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textStyle="normal" android:textColor="@color/item_selection" android:layout_gravity="left" android:id="@id/set_dpadmod_value" android:layout_width="48.0sp" android:layout_height="wrap_content" android:layout_marginLeft="32.0sp" android:layout_marginTop="14.0sp" android:layout_marginRight="10.0sp" />
                <SeekBar android:layout_gravity="left" android:id="@id/sb_dpadmod_value" android:paddingTop="12.0dip" android:paddingBottom="18.0dip" android:layout_width="180.0sp" android:layout_height="wrap_content" android:max="100" android:progress="0" android:layout_toRightOf="@id/set_dpadmod_value" android:layout_centerInParent="false" android:layout_centerHorizontal="false" />
            </RelativeLayout>
            <View style="@style/drastic_seperator" />
            <TextView android:text="@string/str_set_btnmod" style="@style/drastic_option_item_subhdr_text" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textStyle="normal" android:textColor="@color/item_selection" android:layout_gravity="left" android:id="@id/set_btnmod_value" android:layout_width="48.0sp" android:layout_height="wrap_content" android:layout_marginLeft="32.0sp" android:layout_marginTop="14.0sp" android:layout_marginRight="10.0sp" />
                <SeekBar android:layout_gravity="left" android:id="@id/sb_btnmod_value" android:paddingTop="12.0dip" android:paddingBottom="18.0dip" android:layout_width="180.0sp" android:layout_height="wrap_content" android:max="100" android:progress="0" android:layout_toRightOf="@id/set_btnmod_value" android:layout_centerInParent="false" android:layout_centerHorizontal="false" />
            </RelativeLayout>
            <View style="@style/drastic_seperator" />
            <TextView android:text="@string/str_set_ctrlalpha" style="@style/drastic_option_item_subhdr_text" />
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="14.0sp" android:textStyle="normal" android:textColor="@color/item_selection" android:layout_gravity="left" android:id="@id/set_ctrlalpha_value" android:layout_width="48.0sp" android:layout_height="wrap_content" android:layout_marginLeft="32.0sp" android:layout_marginTop="14.0sp" android:layout_marginRight="10.0sp" />
                <SeekBar android:layout_gravity="left" android:id="@id/sb_ctrlalpha_value" android:paddingTop="12.0dip" android:paddingBottom="18.0dip" android:layout_width="180.0sp" android:layout_height="wrap_content" android:max="100" android:progress="0" android:layout_toRightOf="@id/set_ctrlalpha_value" android:layout_centerInParent="false" android:layout_centerHorizontal="false" />
            </RelativeLayout>
        </TableLayout>
    </ScrollView>
    <View android:layout_width="fill_parent" android:layout_height="32.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" />
</LinearLayout>
