<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/keymapper_root" android:background="@color/menu_bg_center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TableRow android:background="@color/menu_bg_header" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center_vertical" android:layout_width="32.0dip" android:layout_height="32.0dip" android:layout_margin="6.0dip" android:src="@drawable/con_ds" android:contentDescription="@null" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ffffffee" android:layout_gravity="center_vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="0.0dip" android:layout_marginTop="0.0dip" android:layout_marginRight="6.0dip" android:layout_marginBottom="0.0dip" android:text="@string/str_set_keyconfig" android:layout_weight="1.0" />
        </TableRow>
        <View android:background="#ff666666" android:layout_height="1.0dip" android:layout_marginLeft="1.0dip" android:layout_marginRight="1.0dip" />
    </TableLayout>
    <RelativeLayout android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/item_big" android:id="@id/tw_keyinputheader" android:paddingTop="40.0sp" android:paddingBottom="10.0sp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_set_keyinput" android:layout_centerHorizontal="true" />
        <TextView android:textSize="22.0sp" android:textStyle="bold" android:textColor="#ff111111" android:id="@id/tw_mapbutton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/empty" android:layout_below="@id/tw_keyinputheader" android:layout_centerHorizontal="true" />
        <Button android:id="@id/btn_cancel_keymap" android:layout_width="120.0sp" android:layout_height="wrap_content" android:layout_marginRight="20.0sp" android:layout_marginBottom="20.0sp" android:text="@string/str_set_key_cancel" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
        <Button android:id="@id/btn_skip_keymap" android:layout_width="120.0sp" android:layout_height="wrap_content" android:layout_marginBottom="20.0sp" android:text="@string/str_set_key_skip" android:layout_toLeftOf="@id/btn_cancel_keymap" android:layout_alignParentBottom="true" />
    </RelativeLayout>
</LinearLayout>
